# ha_integration

./: .gitignore  init.ps1  pyproject.toml  readme.md
ha_config/: configuration.yaml
ha_config/custom_components/my_component/: __init__.py  const.py
tests/: test_integration.py
